WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145969
[SOUP] Custom URI schemes don't work for requests containing a fragment identifier
https://bugs.webkit.org/show_bug.cgi?id=145969
Summary
[SOUP] Custom URI schemes don't work for requests containing a fragment ident...
Carlos Garcia Campos
Reported
2015-06-15 03:46:05 PDT
For URIs like foo:bar#baz, what the custom protocol manager receives in the UI process is foo:bar, so the user can't handle fragments. Wrote a test case for GTK, see: /webkit2/WebKitWebContext/uri-scheme: ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestWebKitWebContext.cpp:220:void testWebContextURIScheme(URISchemeTest*, gconstpointer): assertion failed (webkit_uri_scheme_request_get_uri(test->m_uriSchemeRequest.get()) == "echo:with#fragment"): ("echo:with" == "echo:with#fragment")
Attachments
Patch
(8.70 KB, patch)
2015-06-15 08:44 PDT
,
Carlos Garcia Campos
svillar
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-06-15 08:44:54 PDT
Created
attachment 254877
[details]
Patch
Sergio Villar Senin
Comment 2
2015-06-15 09:33:25 PDT
Comment on
attachment 254877
[details]
Patch r=me
Carlos Garcia Campos
Comment 3
2015-06-15 09:37:10 PDT
Committed
r185553
: <
http://trac.webkit.org/changeset/185553
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug