Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp
@@ -26,6 +26,7 @@
 #include "GUniquePtrSoup.h"
 #include "HTTPParsers.h"
 #include "MIMETypeRegistry.h"
+#include "WebKitSoupRequestGeneric.h"
 #include <wtf/text/CString.h>
 #include <wtf/text/WTFString.h>
 
@@ -128,6 +129,9 @@ void ResourceRequest::updateSoupRequest(SoupRequest* soupRequest) const
     uint64_t* initiatingPageIDPtr = static_cast<uint64_t*>(fastMalloc(sizeof(uint64_t)));
     *initiatingPageIDPtr = m_initiatingPageID;
     g_object_set_data_full(G_OBJECT(soupRequest), g_intern_static_string(gSoupRequestInitiatingPageIDKey), initiatingPageIDPtr, fastFree);
+
+    if (WEBKIT_IS_SOUP_REQUEST_GENERIC(soupRequest))
+        webkitSoupRequestGenericSetRequest(WEBKIT_SOUP_REQUEST_GENERIC(soupRequest), *this);
 }
 
 void ResourceRequest::updateFromSoupRequest(SoupRequest* soupRequest)
